--- a/frontend/src/pages/HomePage.css
+++ b/frontend/src/pages/HomePage.css
@@ -60,7 +60,12 @@ body {
     height: 100%;
     object-fit: cover;
     /* Em mobile, pode querer focar mais no centro ou topo */
-    object-position: center;
+    object-position: 0 -700px;
+}
+
+.hero-overlay {
+    position: absolute;
+    top: vh;
 }
 
 /* Estilo do Texto Sobreposto na Imagem */
@@ -70,7 +75,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.301);
+    background-color: rgba(0, 0, 0, 0.137);
     color: white;
     display: flex;
     flex-direction: column;
